--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -43,8 +43,7 @@ jobs:
       # Step 5: Install test dependencies
       - name: Install dependencies
         run: |
-          pip install .[development]
-          pip install .[test]
+          pip install .
           pip install pytest
 
       # Step 6: Create .env file
