--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -9,11 +9,14 @@ on:
       - main
 
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
+    outputs:
+      cache-hit: ${{ steps.cache-deps.outputs.cache-hit }}
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+      fail-fast: false  # Ensure all setups run even if one fails
 
     steps:
       # Step 1: Checkout correct branch
@@ -34,43 +37,48 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # Step 4: Install build tools
-      - name: Install build tools
+      # Step 4: Cache dependencies
+      - name: Cache dependencies
+        id: cache-deps
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: pip-cache-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+
+      # Step 5: Install dependencies if not cached
+      - name: Install dependencies
+        if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel
-
-      # Step 5: Install test dependencies
-      - name: Install dependencies
-        run: |
-          pip install .
-          pip install pytest
+          pip install -r requirements.txt
 
       # Step 6: Create .env file
       - name: Create .env file
         run: |
-          echo 'LOG_LEVEL="INFO"' > .env
-          echo 'CB_URL="http://localhost:1026"' >> .env
-          echo 'ORION_LD_URL="http://localhost:1027"' >> .env
-          echo 'IOTA_JSON_URL="http://localhost:4041"' >> .env
-          echo 'IOTA_UL_URL="http://localhost:4061"' >> .env
-          echo 'QL_URL="http://localhost:8668"' >> .env
-          echo 'MQTT_BROKER_URL="mqtt://localhost:1883"' >> .env
-          echo 'MQTT_BROKER_URL_INTERNAL="mqtt://mqtt-broker:1883"' >> .env
-          echo '"LD_MQTT_BROKER_URL": "mqtt://localhost:1883"' >> .env
-          echo '"LD_MQTT_BROKER_URL_INTERNAL": "mqtt://mqtt-broker:1883"' >> .env
-          echo 'FIWARE_SERVICE="filip"' >> .env
-          echo 'FIWARE_SERVICEPATH="/testing"' >> .env
+          cat <<EOF > .env
+          LOG_LEVEL="INFO"
+          CB_URL="http://localhost:1026"
+          ORION_LD_URL="http://localhost:1027"
+          IOTA_JSON_URL="http://localhost:4041"
+          IOTA_UL_URL="http://localhost:4061"
+          QL_URL="http://localhost:8668"
+          MQTT_BROKER_URL="mqtt://localhost:1883"
+          MQTT_BROKER_URL_INTERNAL="mqtt://mqtt-broker:1883"
+          LD_MQTT_BROKER_URL="mqtt://localhost:1883"
+          LD_MQTT_BROKER_URL_INTERNAL="mqtt://mqtt-broker:1883"
+          FIWARE_SERVICE="filip"
+          FIWARE_SERVICEPATH="/testing"
+          EOF
 
       # Step 7: Verify .env file
-      - name: Verify environment setup
+      - name: Verify .env file
         run: cat .env
 
-      # Step 8: Navigate to docker folder & Start FIWARE services
+      # Step 8: Start FIWARE services
       - name: Start FIWARE Services
         run: |
           cd docker
-          docker compose up -d
+          docker-compose up -d
 
       # Step 9: Wait for FIWARE Services
       - name: Wait for FIWARE Services
@@ -85,18 +93,51 @@ jobs:
       - name: Debug - Show Running Docker Containers
         run: docker ps -a
 
-      # Step 11: Navigate back to home and then tests folder
-      - name: Navigate to Tests Folder
-        run: cd $GITHUB_WORKSPACE/tests && ls -la
+  test:
+    needs: setup  # Ensure setup is completed before running tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+      fail-fast: false  # Ensures all test jobs run even if one fails
 
-      # Step 12: Run tests
-      - name: Run tests with both unittest and pytest
+    steps:
+      # Step 1: Checkout correct branch
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          ref: 315-Unittest-via-Github-actions  # Ensure correct branch
+
+      # Step 2: Restore Cached Dependencies
+      - name: Restore Cached Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: pip-cache-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+
+      # Step 3: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      # Step 4: Install dependencies (if cache is empty)
+      - name: Install dependencies (if needed)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 5: Debug - Show Running Docker Containers
+      - name: Debug - Show Running Docker Containers
+        run: docker ps -a
+
+      # Step 6: Navigate back to tests folder
+      - name: Navigate to Tests Folder
+        run: |
+          cd $GITHUB_WORKSPACE/tests
+          ls -la
+
+      # Step 7: Run Tests
+      - name: Run tests with unittest and pytest
         run: |
           python -m unittest discover --verbose . "test_*.py"
-        
-        #export TEST_ENGINE=PYTEST &&
-          #export TEST_PATH=tests &&
-          #if [ "$TEST_ENGINE" == "PYTEST" ]; then python -m pytest $TEST_PATH/; else
-          #python -m unittest tests/clients/test_ngsi_v2_cb.py; fi
-          
-      #python -m unittest discover --verbose . "test_*.py"; fi
