--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -43,14 +43,16 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: pip-cache-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+          key: pip-cache-${{ matrix.python-version }}-${{ hashFiles('setup.py') }}
 
       # Step 5: Install dependencies if not cached
       - name: Install dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install setuptools wheel
+          pip install .
+          pip install pytest
 
       # Step 6: Create .env file
       - name: Create .env file
@@ -113,7 +115,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: pip-cache-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+          key: pip-cache-${{ matrix.python-version }}-${{ hashFiles('setup.py') }}
 
       # Step 3: Set up Python
       - name: Set up Python ${{ matrix.python-version }}
@@ -125,19 +127,15 @@ jobs:
       - name: Install dependencies (if needed)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install setuptools wheel
+          pip install .
+          pip install pytest
 
       # Step 5: Debug - Show Running Docker Containers
       - name: Debug - Show Running Docker Containers
         run: docker ps -a
 
-      # Step 6: Navigate back to tests folder
-      - name: Navigate to Tests Folder
-        run: |
-          cd $GITHUB_WORKSPACE/tests
-          ls -la
-
-      # Step 7: Run Tests
+      # Step 6: Run Tests
       - name: Run tests with unittest and pytest
         run: |
-          python -m unittest discover --verbose . "test_*.py"
+          python -m pytest tests
