--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -76,25 +76,6 @@ jobs:
       - name: Verify .env file
         run: cat .env
 
-      # Step 8: Start FIWARE services
-      - name: Start FIWARE Services
-        run: |
-          cd docker
-          docker-compose up -d
-
-      # Step 9: Wait for FIWARE Services
-      - name: Wait for FIWARE Services
-        run: |
-          for i in {1..30}; do
-            curl -s http://localhost:1026/version && \
-            curl -s http://localhost:4041/iot/about && \
-            curl -s http://localhost:8668/version && break || sleep 5
-          done
-
-      # Step 10: Debug - Show Running Docker Containers
-      - name: Debug - Show Running Docker Containers
-        run: docker ps -a
-
   test:
     needs: setup  # Ensure setup is completed before running tests
     runs-on: ubuntu-latest
@@ -131,7 +112,22 @@ jobs:
           pip install .
           pip install pytest
 
-      # Step 5: Debug - Show Running Docker Containers
+      # Step 8: Start FIWARE services
+      - name: Start FIWARE Services
+        run: |
+          cd docker
+          docker compose up -d
+
+      # Step 9: Wait for FIWARE Services
+      - name: Wait for FIWARE Services
+        run: |
+          for i in {1..30}; do
+            curl -s http://localhost:1026/version && \
+            curl -s http://localhost:4041/iot/about && \
+            curl -s http://localhost:8668/version && break || sleep 5
+          done
+
+      # Step 10: Debug - Show Running Docker Containers
       - name: Debug - Show Running Docker Containers
         run: docker ps -a
 
