--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
+    environment: unittests
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
@@ -40,7 +41,6 @@ jobs:
         run: |
           cat <<EOF > .env
           LOG_LEVEL="INFO"
-          CB_URL="http://localhost:1026"
           ORION_LD_URL="http://localhost:1027"
           IOTA_JSON_URL="http://localhost:4041"
           IOTA_UL_URL="http://localhost:4061"
@@ -93,4 +93,5 @@ jobs:
       # Step 6: Run Tests
       - name: Run tests with unittest and pytest
         run: |
+          python -m unittest tests/clients/test_ngsi_v2_cb.py
           python -m pytest tests
