--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -42,16 +42,16 @@ jobs:
           cat <<EOF > .env
           LOG_LEVEL="INFO"
           CB_URL=${{ vars.CB_URL }} # Using stored environment variable
-          ORION_LD_URL="http://localhost:1027"
-          IOTA_JSON_URL="http://localhost:4041"
-          IOTA_UL_URL="http://localhost:4061"
-          QL_URL="http://localhost:8668"
-          MQTT_BROKER_URL="mqtt://localhost:1883"
-          MQTT_BROKER_URL_INTERNAL="mqtt://mqtt-broker:1883"
-          LD_MQTT_BROKER_URL="mqtt://localhost:1883"
-          LD_MQTT_BROKER_URL_INTERNAL="mqtt://mqtt-broker:1883"
-          FIWARE_SERVICE="filip"
-          FIWARE_SERVICEPATH="/testing"
+          ORION_LD_URL=${{ vars.ORION_LD_URL }}
+          IOTA_JSON_URL=${{ vars.IOTA_JSON_URL }}
+          IOTA_UL_URL=${{ vars.IOTA_UL_URL }}
+          QL_URL=${{ vars.QL_URL }}
+          MQTT_BROKER_URL=${{ vars.MQTT_BROKER_URL }}
+          MQTT_BROKER_URL_INTERNAL=${{ vars.MQTT_BROKER_URL_INTERNAL }}
+          LD_MQTT_BROKER_URL=${{ vars.LD_MQTT_BROKER_URL }}
+          LD_MQTT_BROKER_URL_INTERNAL=${{ vars.LD_MQTT_BROKER_URL_INTERNAL }}
+          FIWARE_SERVICE=${{ vars.FIWARE_SERVICE }}
+          FIWARE_SERVICEPATH=${{ vars.FIWARE_SERVICEPATH }}
           EOF
 
       # Step 7: Verify .env file
