--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,193 +20,190 @@ x-logging-high: &logging-high # Used by: cratedb, iot-agent-json
       max-size: 50m
 
 services:
-          
+
   orion:
-    image: fiware/orion:${ORION_VERSION:-3.8.0} #Sometimes the latest builds fail. Hence, we recommend to use fixed, stable versions
+    image: fiware/orion:3.8.0 # Sometimes the latest builds fail. Hence, we recommend using fixed, stable versions
     hostname: orion
     container_name: "orion"
     restart: always
     ports:
-       - "${ORION_PORT:-1026}:1026"
+       - "1026:1026"
     networks:
        - filip
     depends_on:
        - mongo-db
     environment:
-      - ORION_LOG_LEVEL=${ORION_LOG_LEVEL:-DEBUG}
-      - ORION_LOG_FOR_HUMANS=${ORION_LOG_FOR_HUMANS:-TRUE}
-      - ORION_STAT_COUNTERS=${ORION_STAT_COUNTERS:-FALSE}
-      - ORION_STAT_SEM_WAIT=${ORION_STAT_SEM_WAIT:-FALSE}
-      - ORION_STAT_TIMING=${ORION_STAT_TIMING:-FALSE}
-      - ORION_STAT_NOTIF_QUEUE=${ORION_STAT_NOTIF_QUEUE:-TRUE}
-      - ORION_MONGO_HOST=${ORION_MONGO_HOST_SN:-mongo-db}
-      # - ORION_MONGO_REPLICA_SET=${ORION_MONGO_REPLICA_SET:-rs0}
-      - ORION_MONGO_WRITE_CONCERN=${ORION_WRITE_CONCERN:-1}
-      - ORION_NOTIF_MODE=${ORION_NOTIFICATION_MODE:-transient} 
-      # - ORION_TRQ_POOL_SIZE={ORION_THREADPOOL_SIZE=-2} # use only if ORION_NOTIFICATION_MODE is set to "threadpool"
-      - ORION_MUTEX_POLICY=${ORION_REQUEST_POLICY:-all}
-      - ORION_CONN_MEMORY=${ORION_CONNECTION_MEMORY:-128}
+      - ORION_LOG_LEVEL=DEBUG
+      - ORION_LOG_FOR_HUMANS=TRUE
+      - ORION_STAT_COUNTERS=FALSE
+      - ORION_STAT_SEM_WAIT=FALSE
+      - ORION_STAT_TIMING=FALSE
+      - ORION_STAT_NOTIF_QUEUE=TRUE
+      - ORION_MONGO_HOST=mongo-db
+      # - ORION_MONGO_REPLICA_SET=rs0
+      - ORION_MONGO_WRITE_CONCERN=1
+      - ORION_NOTIF_MODE=transient
+      # - ORION_TRQ_POOL_SIZE={ORION_THREADPOOL_SIZE=-2} # Use only if ORION_NOTIFICATION_MODE is set to "threadpool"
+      - ORION_MUTEX_POLICY=all
+      - ORION_CONN_MEMORY=128
     logging: *logging-medium
 
   mongo-db:
-    image: mongo:${MONGODB_VERSION:-5.0.24}
+    image: mongo:5.0.24
     hostname: mongo-db
     container_name: "mongo-db"
     restart: always
     networks:
         - filip
     volumes:
-      - ${MONGODB_VOLUME_PATH:-mongo-db}:${MONGO_DATA_DIR:-/data/db}
+      - mongo-db:/data/db
     logging: *logging-low
 
   iot-agent-json:
-    image: fiware/iotagent-json:${IOTA_JSON_VERSION:-1.19.0}
+    image: fiware/iotagent-json:1.26.0
     hostname: iot-agent
     container_name: "iot-agent"
     restart: always
     ports:
-      - "${IOTA_JSON_PORT:-4041}:${IOTA_JSON_NORTH_PORT:-4041}"
+      - "4041:4041"
     networks:
       - filip
     depends_on:
       - mongo-db
     environment:
-      - IOTA_MULTI_CORE=${IOTA_JSON_MULTI_CORE:-true}
-      - IOTA_CB_HOST=${IOTA_JSON_CB_HOST:-orion}
-      - IOTA_CB_PORT=${IOTA_JSON_CB_PORT:-1026}
-      - IOTA_NORTH_PORT=${IOTA_JSON_NORTH_PORT:-4041}
-      - IOTA_REGISTRY_TYPE=${IOTA_JSON_REGISTRY_TYPE:-mongodb}
-      - IOTA_LOG_LEVEL=${IOTA_JSON_LOG_LEVEL:-DEBUG}
-      - IOTA_TIMESTAMP=${IOTA_JSON_TIMESTAMP:-true}
-      - IOTA_CB_NGSI_VERSION=${IOTA_JSON_CB_NGSI_VERSION:-v2}
-      - IOTA_AUTOCAST=${IOTA_JSON_AUTOCAST:-false}
-      - IOTA_EXPLICIT_ATTRS=${IOTA_JSON_EXPLICIT_ATTRS:-true}
-      - IOTA_MONGO_HOST=${IOTA_JSON_MONGODB_HOST_SN:-mongo-db}
-      - IOTA_MONGO_PORT=${IOTA_JSON_MONGODB_PORT:-27017}
-      - IOTA_MONGO_DB=${IOTA_JSON_MONGODB_DB_NAME:-iotagentjson}
-      - IOTA_PROVIDER_URL=${IOTA_JSON_PROVIDER_URL:-http://iot-agent-json:4041}
-      - IOTA_DEFAULT_RESOURCE=${IOTA_JSON_DEFAULT_RESOURCE:-/iot/json}
-      - IOTA_HTTP_PORT=${IOTA_JSON_HTTP_PORT:-7896}
-      - IOTA_MQTT_HOST=${IOTA_JSON_MQTT_HOST:-mqtt-broker}
-      - IOTA_MQTT_PORT=${IOTA_JSON_MQTT_PORT:-1883}
-      # - IOTA_MQTT_USERNAME=${IOTA_JSON_MQTT_USERNAME:-iotagent}
-      # - IOTA_MQTT_PASSWORD=${IOTA_JSON_MQTT_PASSWORD:-mypassword}
-      - IOTA_MQTT_PROTOCOL=${IOTA_JSON_MQTT_PROTOCOL:-mqtt}
-      - IOTA_MQTT_KEEPALIVE=${IOTA_JSON_MQTT_KEEPALIVE:-60}
-      - IOTA_AMQP_DISABLED=${IOTA_JSON_AMQP_DISABLED:-true}
+      - IOTA_MULTI_CORE=true
+      - IOTA_CB_HOST=orion
+      - IOTA_CB_PORT=1026
+      - IOTA_NORTH_PORT=4041
+      - IOTA_REGISTRY_TYPE=mongodb
+      - IOTA_LOG_LEVEL=DEBUG
+      - IOTA_TIMESTAMP=true
+      - IOTA_CB_NGSI_VERSION=v2
+      - IOTA_AUTOCAST=false
+      - IOTA_EXPLICIT_ATTRS=true
+      - IOTA_MONGO_HOST=mongo-db
+      - IOTA_MONGO_PORT=27017
+      - IOTA_MONGO_DB=iotagentjson
+      - IOTA_PROVIDER_URL=http://iot-agent-json:4041
+      - IOTA_DEFAULT_RESOURCE=/iot/json
+      - IOTA_HTTP_PORT=7896
+      - IOTA_MQTT_HOST=mqtt-broker
+      - IOTA_MQTT_PORT=1883
+      # - IOTA_MQTT_USERNAME=iotagent
+      # - IOTA_MQTT_PASSWORD=mypassword
+      - IOTA_MQTT_PROTOCOL=mqtt
+      - IOTA_MQTT_KEEPALIVE=60
+      - IOTA_AMQP_DISABLED=true
     logging: *logging-high
 
   iot-agent-ul:
-    image: fiware/iotagent-ul:${IOTA_UL_VERSION:-1.19.0}
+    image: fiware/iotagent-ul:1.25.0
     hostname: iot-agent-ul
     networks:
       - filip
     ports:
       - "4061:4061"
     environment:
-      - IOTA_CB_HOST=${IOTA_UL_CB_HOST:-orion} # name of the context broker to update context
-      - IOTA_CB_PORT=${IOTA_UL_CB_PORT:-1026} # port the context broker listens on to update context
-      - IOTA_NORTH_PORT=${IOTA_UL_NORTH_PORT:-4061}
-      - IOTA_REGISTRY_TYPE=${IOTA_UL_REGISTRY_TYPE:-mongodb} # Whether to hold IoT device info in memory or in a database
-      - IOTA_LOG_LEVEL=${IOTA_UL_LOG_LEVEL:-ERROR} # The log level of the IoT Agent
-      - IOTA_TIMESTAMP=${IOTA_UL_TIMESTAMP:-true} # Supply timestamp information with each measurement
-      - IOTA_CB_NGSI_VERSION=${IOTA_UL_CB_NGSI_VERSION:-v2} # use NGSIv2 when sending updates for active attributes
-      - IOTA_AUTOCAST=${IOTA_UL_AUTOCAST:-true} # Ensure Ultralight number values are read as numbers not strings
-      - IOTA_MONGO_HOST=${IOTA_UL_MONGODB_HOST:-mongodb1,mongodb2,mongodb3} # The host name of MongoDB or list of hosts in case mongodb is instanciated as replicaset
-      - IOTA_MONGO_PORT=${IOTA_UL_MONGODB_PORT:-27017} # The port mongoDB is listening on
-      - IOTA_MONGO_REPLICASET=${IOTA_UL_MONGO_REPLICASET:-rs0} # Optional - name of the replicaset if mongodb is instanciated as replicaset
-      - IOTA_MONGO_DB=${IOTA_UL_MONGODB_DB_NAME:-iotagentul} # The name of the database used in mongoDB
-      - IOTA_MQTT_HOST=${IOTA_UL_MQTT_HOST:-mqtt-broker} # The host name of the MQTT Broker
-      - IOTA_MQTT_PORT=${IOTA_UL_MQTT_PORT:-1883} # The port the MQTT Broker is listening on to receive topics
-      - IOTA_MQTT_KEEPALIVE=${IOTA_UL_MQTT_KEEPALIVE:-60}
-      - IOTA_PROVIDER_URL=${IOTA_UL_PROVIDER_URL:-http://iot-agent-ul:4061}
-      - IOTA_MULTI_CORE=${IOTA_UL_MULTI_CORE:-true}
+      - IOTA_CB_HOST=orion # Name of the context broker to update context
+      - IOTA_CB_PORT=1026 # Port the context broker listens on to update context
+      - IOTA_NORTH_PORT=4061
+      - IOTA_REGISTRY_TYPE=mongodb # Whether to hold IoT device info in memory or in a database
+      - IOTA_LOG_LEVEL=ERROR # The log level of the IoT Agent
+      - IOTA_TIMESTAMP=true # Supply timestamp information with each measurement
+      - IOTA_CB_NGSI_VERSION=v2 # Use NGSIv2 when sending updates for active attributes
+      - IOTA_AUTOCAST=true # Ensure Ultralight number values are read as numbers not strings
+      - IOTA_MONGO_HOST=mongo-db # The host name of MongoDB or list of hosts in case MongoDB is instantiated as replica set
+      - IOTA_MONGO_PORT=27017 # The port MongoDB is listening on
+      - IOTA_MONGO_DB=iotagentul # The name of the database used in MongoDB
+      - IOTA_MQTT_HOST=mqtt-broker # The host name of the MQTT Broker
+      - IOTA_MQTT_PORT=1883 # The port the MQTT Broker is listening on to receive topics
+      - IOTA_MQTT_KEEPALIVE=60
+      - IOTA_PROVIDER_URL=http://iot-agent-ul:4061
+      - IOTA_MULTI_CORE=true
     logging: *logging-high
 
-    
   mqtt-broker:
-    image: eclipse-mosquitto:${MOSQUITTO_VERSION:-2.0.11}
+    image: eclipse-mosquitto:2.0.11
     hostname: mqtt-broker
     container_name: mqtt-broker
     restart: always
-    ports: 
-        - "${MOSQUITTO_PORT:-1883}:1883"
+    ports:
+        - "1883:1883"
     networks:
         - filip
     volumes:
         - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
 
   quantumleap:
-    image: orchestracities/quantumleap:${QL_VERSION:-1.0.0}
+    image: orchestracities/quantumleap:1.0.0
     hostname: quantumleap
     container_name: quantumleap
     restart: always
     ports:
-      - "${QL_PORT:-8668}:8668"
+      - "8668:8668"
     networks:
       - filip
     depends_on:
       - orion
       - crate
     environment:
-      - LOGLEVEL=${QL_LOG_LEVEL:-DEBUG}
-      - CRATE_HOST=${QL_CRATEDB_HOST_SN:-crate}
-      # - CRATE_DB_USER=${QL_CRATEDB_USER:-ql}
-      # - CRATE_DB_PASS=${QL_CRATEDB_PASSWORD:-myqlpassword}
-      # - REDIS_HOST=${QL_REDIS_HOST:-redis-cache}
-      # - REDIS_PORT=${QL_REDIS_PORT:-6379}
-      # - CACHE_QUERIES=${QL_CACHE_QUERIES:-True}
+      - LOGLEVEL=DEBUG
+      - CRATE_HOST=crate
+      # - CRATE_DB_USER=ql
+      # - CRATE_DB_PASS=myqlpassword
+      # - REDIS_HOST=redis-cache
+      # - REDIS_PORT=6379
+      # - CACHE_QUERIES=True
     logging: *logging-low
-      
+
   crate:
-    image: crate:${CRATEDB_VERSION:-4.8.4} # Please check release notes!
+    image: crate:4.8.4 # Please check release notes!
     hostname: crate
     container_name: crate
     restart: always
     ports:
-      - "${CRATEDB_Port:-4200}:4200"
+      - "4200:4200"
     networks:
         - filip
     volumes:
-      - ${CRATEDB_VOLUME_PATH:-crate}:${CRATEDB_DATA_DIR:-/data}
-    environment: 
-      - TZ=${TIMEZONE:-Europe/Berlin}
-      - CRATE_HEAP_SIZE=${CRATEDB_HEAP_SIZE:-1g}
+      - crate:/data
+    environment:
+      - TZ=Europe/Berlin
+      - CRATE_HEAP_SIZE=1g
     logging: *logging-high
 
   orion-ld:
-    #Sometimes the newest builds fail. Hence, we fixed a stable version that
-    #probably will be updated once in a while
-    image: fiware/orion-ld:${ORIONLD_VERSION:-1.5.1}
+    # Sometimes the newest builds fail. Hence, we fixed a stable version that
+    # probably will be updated once in a while
+    image: fiware/orion-ld:1.5.1
     hostname: orion-ld
     container_name: "orion-ld"
     restart: always
     ports:
-       - "${ORIONLD_PORT:-1027}:1026"
+       - "1027:1026"
     networks:
         - filip
     depends_on:
         - mongo-db
     environment:
-      - ORIONLD_LOG_LEVEL=${ORIONLD_LOG_LEVEL:-DEBUG}
-      - ORIONLD_TMP_TRACES=FALSE #log level is buggy in 1.5.1 (TMP messages in logs for every request)
-      - ORIONLD_LOG_FOR_HUMANS=${ORIONLD_LOG_FOR_HUMANS:-TRUE}
-      - ORIONLD_CONTEXT_DOWNLOAD_TIMEOUT=${ORIONLD_CONTEXT_DOWNLOAD_TIMEOUT:-1000}
-      - ORIONLD_CONTEXT_DOWNLOAD_ATTEMPTS=${ORIONLD_CONTEXT_DOWNLOAD_ATTEMPTS:-5}
-      - ORIONLD_FORWARDING=${ORIONLD_FORWARDING:-TRUE}
-      - ORIONLD_STAT_COUNTERS=${ORIONLD_STAT_COUNTERS:-TRUE}
-      - ORIONLD_STAT_SEM_WAIT=${ORIONLD_STAT_SEM_WAIT:-TRUE}
-      - ORIONLD_STAT_TIMING=${ORIONLD_STAT_TIMING:-TRUE}
-      - ORIONLD_STAT_NOTIF_QUEUE=${ORIONLD_STAT_NOTIF_QUEUE:-TRUE}
-      - ORIONLD_MONGO_HOST=${ORIONLD_MONGO_HOST:-mongo-db}
-      # - ORIONLD_MONGO_REPLICA_SET=${ORIONLD_MONGO_REPLICA_SET:-rs0}
-      - ORIONLD_MONGO_DB=${ORIONLD_MONGO_DB:-orionld} 
-      - ORIONLD_MONGO_WRITE_CONCERN=${ORIONLD_MONGO_WRITE_CONCERN:-0}
-      - ORIONLD_MULTI_SERVICE=${ORIONLD_MULTI_SERVICE:-TRUE}
-      - ORIONLD_NOTIF_MODE=${ORIONLD_NOTIF_MODE:-persistent}
-      - ORIONLD_MUTEX_POLICY=${ORIONLD_MUTEX_POLICY:-all}
-      - ORIONLD_CONN_MEMORY=${ORIONLD_CONN_MEMORY:-128}
-
+      - ORIONLD_LOG_LEVEL=DEBUG
+      - ORIONLD_TMP_TRACES=FALSE # Log level is buggy in 1.5.1 (TMP messages in logs for every request)
+      - ORIONLD_LOG_FOR_HUMANS=TRUE
+      - ORIONLD_CONTEXT_DOWNLOAD_TIMEOUT=1000
+      - ORIONLD_CONTEXT_DOWNLOAD_ATTEMPTS=5
+      - ORIONLD_FORWARDING=TRUE
+      - ORIONLD_STAT_COUNTERS=TRUE
+      - ORIONLD_STAT_SEM_WAIT=TRUE
+      - ORIONLD_STAT_TIMING=TRUE
+      - ORIONLD_STAT_NOTIF_QUEUE=TRUE
+      - ORIONLD_MONGO_HOST=mongo-db
+      # - ORIONLD_MONGO_REPLICA_SET=rs0
+      - ORIONLD_MONGO_DB=orionld
+      - ORIONLD_MONGO_WRITE_CONCERN=0
+      - ORIONLD_MULTI_SERVICE=TRUE
+      - ORIONLD_NOTIF_MODE=persistent
+      - ORIONLD_MUTEX_POLICY=all
+      - ORIONLD_CONN_MEMORY=128
 
 volumes:
   mongo-db:
