--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -61,7 +61,7 @@ jobs:
       # Step 6: Start FIWARE services
       - name: Start FIWARE Services
         run: |
-          cd docker
+          cd filip_unittest/docker
           docker compose up -d
 
       # Step 7: Wait for FIWARE Services
