chore: decrease the testing python version in gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
     - deploy
 
 variables:
-    EXCLUDE_PYTHON: 37
+    EXCLUDE_PYTHON: 37, 38, 39, 310, 311
     PYTHON_VERSION: "registry.git.rwth-aachen.de/ebc/ebc_all/gitlab_ci/templates:python_3.9"
     PAGES_BRANCH: master
     GIT_REPO: "RWTH-EBC/FiLiP"
