--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
     - deploy
 
 variables:
-    EXCLUDE_PYTHON: 37, 38, 39, 310, 311, 312
+    EXCLUDE_PYTHON: 37, 38, 39, 310, 311
     PYTHON_VERSION: "registry.git.rwth-aachen.de/ebc/ebc_all/gitlab_ci/templates:python_3.10"
     PAGES_BRANCH: master
     GIT_REPO: "RWTH-EBC/FiLiP"
@@ -23,10 +23,12 @@ include:
       file: 'pages/gh-pages.gitlab-ci.yml'
       rules:
         - if: $CI_COMMIT_BRANCH == "master" || $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"
-    - project: 'EBC/EBC_all/gitlab_ci/templates'
-      file: 'python/tests/tests.gitlab-ci.yml'
-    - project: 'EBC/EBC_all/gitlab_ci/templates'
-      file: 'python/tests/coverage.gitlab-ci.yml'
+    #- project: 'EBC/EBC_all/gitlab_ci/templates'
+    #  file: 'python/tests/tests.gitlab-ci.yml'
+    #- project: 'EBC/EBC_all/gitlab_ci/templates'
+    #  file: 'python/tests/coverage.gitlab-ci.yml'
+    - project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
+      file: 'unittest_fiware/fiware_tests.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'python/pypi-release/release.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
