--- a/.github/workflows/compatibility-test.yml
+++ b/.github/workflows/compatibility-test.yml
@@ -12,8 +12,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        orion_version: ["3.8.0"]
-        iot_json_version: ["1.25.0"]
+        orion_version: ["4.1.0", "4.0.0", "3.12.0", "3.11.0", "3.10.0", "3.9.0", "3.8.0", "3.7.0", "3.6.0"]
+        iot_json_version: ["3.7.0", "3.6.0", "3.5.0", "3.4.0", "3.3.0", "3.2.0", "3.1.0", "3.0.2", "2.4.2", "2.3.0",
+                    "1.26.0", "1.25.0"]
 
     steps:
       - uses: actions/checkout@v3
