--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ include:
       file: 'pages/gh-pages.gitlab-ci.yml'
       rules:
         - if: $CI_COMMIT_BRANCH == "master" || $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"
+    # Old CI pipeline that interacts with a FIWARE cluster
     #- project: 'EBC/EBC_all/gitlab_ci/templates'
     #  file: 'python/tests/tests.gitlab-ci.yml'
     #- project: 'EBC/EBC_all/gitlab_ci/templates'
