--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,8 @@ include:
     #- project: 'EBC/EBC_all/gitlab_ci/templates'
     #  file: 'python/tests/coverage.gitlab-ci.yml'
     # The new template deploys FIWARE stack inside the pipeline (orion:1027, orionld:1026, crate:4200, mqtt-broker:1883, iot-agent-ul:4061, quantumleap:8668) .
-    #- project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
-    #  file: 'unittest_fiware/fiware_tests.gitlab-ci.yml'
+    - project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
+      file: 'unittest_fiware/fiware_tests.gitlab-ci.yml'
     # The new template to test coverage in an all-in-one pipeline
     - project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
       file: 'unittest_fiware/fiware_tests_coverage.gitlab-ci.yml'
