--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -157,7 +157,7 @@ jobs:
       - name: Deploy coverage report to gh-pages
         # This condition deploys only when running on the specified branch.
         # You would typically change this to your main branch, e.g., 'refs/heads/main'.
-        if: matrix.run_coverage && github.ref == 'refs/heads/425-Problem-of-the-gitlab-pipeline'
+        if: matrix.run_coverage && github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
