chore: remove 3.8 test

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,7 +18,7 @@ jobs:
     environment: unittests # Environment for unit tests
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         include:
           # Add a specific entry for coverage.
           # This will run on Python 3.11 (or choose your preferred version).
@@ -127,12 +127,6 @@ jobs:
             python -m unittest tests/clients/test_ngsi_v2_cb.py
             python -m pytest tests
           fi
-      
-      # (temp) Step 11: Check container logs
-      - name: check mqtt broker
-        run: |
-          docker logs mqtt-broker
-          docker logs orion
 
       # --- Steps for Coverage Reporting (only run if matrix.run_coverage is true) ---
       # Step 1: Generate the HTML report first
