--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -6,7 +6,7 @@ on:
       - "**" # Runs on pushes to all branches
   pull_request:
     branches:
-      - main # Runs on PRs targeting the main branch
+      - master # Runs on PRs targeting the master branch
 
 # Add permissions for contents to allow pushing to gh-pages
 permissions:
@@ -150,8 +150,7 @@ jobs:
       # Step 4: Deploy the entire coverage_html_report folder to gh-pages
       - name: Deploy coverage report to gh-pages
         # This condition deploys only when running on the specified branch.
-        # You would typically change this to your main branch, e.g., 'refs/heads/main'.
-        if: matrix.run_coverage && github.ref == 'refs/heads/main'
+        if: matrix.run_coverage && github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
