debug github ref condition

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -154,13 +154,13 @@ jobs:
       
       # Debug github.ref master
       - name: Debug github.ref master
-        if: github.ref == "refs/heads/master"
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: echo "The current github.ref is ${{ github.ref }}"
 
       # Step 4: Deploy the entire coverage_html_report folder to gh-pages
       - name: Deploy coverage report to gh-pages
         # This condition deploys only when running on the specified branch.
-        if: matrix.run_coverage && github.ref == 'refs/heads/master'
+        if: ${{ matrix.run_coverage && github.ref == 'refs/heads/master' }}
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
