--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -139,6 +139,14 @@ jobs:
         if: matrix.run_coverage
         run: coverage-badge -o coverage_html_report/badge.svg
 
+      # Step 3: Upload the combined report as a build artifact
+      - name: Upload coverage report as artifact
+        if: matrix.run_coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report-html-py${{ matrix.python-version }}
+          path: coverage_html_report/
+
       # Step 4: Deploy the entire coverage_html_report folder to gh-pages
       - name: Deploy coverage report to gh-pages
         # This condition deploys only when running on the specified branch.
@@ -150,7 +158,7 @@ jobs:
           # The directory to publish. Its entire content will be deployed.
           publish_dir: ./coverage_html_report
           # The target directory on the gh-pages branch.
-          destination_dir: docs/master/coverage
+          destination_dir: docs/coverage
           # Keep this 'true' if you have other content on the gh-pages branch.
           # Set to 'false' if this report is the ONLY thing on the branch.
           keep_files: true
