chore: use PAT for workflow

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -153,7 +153,7 @@ jobs:
         if: ${{ matrix.run_coverage && github.ref == 'refs/heads/master' }}
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.WORKFLOW_TOKEN }}
           publish_branch: gh-pages
           # The directory to publish. Its entire content will be deployed.
           publish_dir: ./coverage_html_report
