--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-    - test
+#    - test
     - doc
     - code_quality
     - build
@@ -37,8 +37,8 @@ include:
     #- project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
     #  file: 'unittest_fiware/fiware_tests.gitlab-ci.yml'
     # The new template to test coverage in an all-in-one pipeline
-    - project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
-      file: 'unittest_fiware/fiware_tests_coverage.gitlab-ci.yml'
+    #- project: 'EBC/EBC_all/gitlab_ci/fiware_templates'
+    #  file: 'unittest_fiware/fiware_tests_coverage.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'python/pypi-release/release.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
