--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,5 @@ jobs:
       FIWARE_COVERAGE: true
       FIWARE_DIRECTORY: './filip_unittest/docker'
       PYTHON_PACKAGE_NAME: 'filip'
-      PYTHON_TEST_MATRIX: '["3.9", "3.10", "3.11", "3.12", "3.13"]'    #List of Python versions to run tests against as a matrix
+      TEST_ENV_VARS: '["CB_URL=http://localhost:1026","ORION_LD_URL=http://localhost:1027","IOTA_URL=http://localhost:4041","IOTA_JSON_URL=http://localhost:4041","IOTA_UL_URL=http://localhost:4061","QL_URL=http://localhost:8668","MQTT_BROKER_URL=mqtt://localhost:1883","MQTT_BROKER_URL_INTERNAL=mqtt://mqtt-broker:1883","LD_MQTT_BROKER_URL=mqtt://localhost:1883","LD_MQTT_BROKER_URL_INTERNAL=mqtt://mqtt-broker:1883","FIWARE_SERVICE=filip","FIWARE_SERVICEPATH=/"]'
+      PYTHON_TEST_MATRIX: '["3.9", "3.10", "3.11", "3.12"]'    #List of Python versions to run tests against as a matrix
